--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@ function renderItem(feature, extended = false) {
 
   if (o.references) {
     for (const name of o.references) {
-      if (name.includes('QuestGiver')) {
+      if (name.includes('SetQuestGiver')) {
         const quest = name.split('_SetQuestGiver')[0].replace('_P','');
         let title = lang[`sid_journal_${quest}_Name`] || quest;
         if (title) {
