--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@ function popupOnClick(e) {
     let i = 0;
     //colors = ['rgb(33,175,214)', 'rgb(136,133,197)', 'rgb(74,211,172,1)'];
 
-    colors = ['#ded', '#dde', '#eee'];
+    colors = ['#eee', '#dde', '#ded'];
 
     // add all groups into flex container
     for (const [key,entries] of Object.entries(groups)) {
