--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@ function popupOnClick(e) {
     div.appendChild(hr);
 
     let container = document.createElement('div');
-    container.className = 'tag-container';
+    container.classList.add('scrollbar','tag-container');
 
     let i = 0;
     colors = ['#eee', '#dde', '#ded'];
